office-kubernetes/kustomize/kavita/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  labels:
    app: kavita
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: kavita
  template:
    metadata:
      labels:
        app: kavita
    spec:
      securityContext:
        runAsUser: 3000
        runAsGroup: 3000
        fsGroup: 3000
      volumes:
        - name: kavita-config
          persistentVolumeClaim:
            claimName: kavita-iscsi
        - name: kavita-media
          nfs:
            server: 192.168.240.112
            path: /mnt/main_pool/private/media/ebooks
            readOnly: false
      containers:
        - name: kavita
          image: jvmilazz0/kavita:latest
          command:   
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /kavita/config
              name: kavita-config
              subPath: kavita
              readonly: false
            - mountPath: /data
              name: kavita-media
              readonly: false
