office-kubernetes/kustomize/kavita/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kavita
spec:
  parentRefs:
  - name: web
    namespace: gateway-system
  hostnames:
    - "kavita.k8s.local-k8s.tech"
  rules:
    - backendRefs:
      - name: kavita
        port: 80
